bump java version to 17