@@ -27,7 +27,6 @@ import java.net.URI;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import lombok.SneakyThrows;
 import org.eclipse.tractusx.ssi.lib.model.JsonLdObject;
 import org.eclipse.tractusx.ssi.lib.model.did.DidDocument;
@@ -135,11 +134,11 @@ public final class SerializeUtil {
    * @return URI uri
    */
   public static URI asURI(Object object) {
-    if (object instanceof URI) {
-      return (URI) object;
+    if (object instanceof URI uri) {
+      return uri;
     }
-    if (object instanceof String) {
-      return URI.create((String) object);
+    if (object instanceof String uriString) {
+      return URI.create(uriString);
     }
     throw new IllegalArgumentException("Unsupported type: " + object.getClass());
   }
@@ -151,12 +150,11 @@ public final class SerializeUtil {
    * @return the list
    */
   public static List<String> asStringList(Object object) {
-    if (object instanceof List) {
-      List<?> rawList = (List<?>) object;
-      return rawList.stream().map(String.class::cast).collect(Collectors.toList());
+    if (object instanceof List<?> rawList) {
+      return rawList.stream().map(String.class::cast).toList();
     }
-    if (object instanceof String) {
-      return List.of((String) object);
+    if (object instanceof String string) {
+      return List.of(string);
     }
     throw new IllegalArgumentException("Unsupported type: " + object.getClass());
   }
@@ -168,9 +166,8 @@ public final class SerializeUtil {
    * @return the list
    */
   public static <T> List<T> asList(Object object) {
-    if (object instanceof List<?>) {
-      List<?> rawList = (List<?>) object;
-      return rawList.stream().map(obj -> (T) obj).collect(Collectors.toList());
+    if (object instanceof List<?> rawList) {
+      return rawList.stream().map(obj -> (T) obj).toList();
     } else {
       T typed = (T) object;
       return List.of(typed);
